add change color for side-menu

--- a/src/html/components/blocks/_side-menu.html
+++ b/src/html/components/blocks/_side-menu.html
@@ -1,5 +1,5 @@
 <nav class="side-menu">
-    <ul class="side-menu__items side-menu__items--arrows">
+    <ul class="side-menu__items side-menu__items--arrows" data-color>
         <li>
             <a class="side-menu__link" href="#">
                 Каталог
@@ -22,7 +22,7 @@
         </li>
     </ul>
 
-    <ul class="side-menu__items side-menu__items--dots">
+    <ul class="side-menu__items side-menu__items--dots" data-color>
         <li>
             <a class="side-menu__link" href="#">
                 Портфолио
@@ -56,7 +56,7 @@
     </ul>
 
     <div class="navigation-connection">
-        <ul class="socials">
+        <ul class="socials" data-color>
             <li class="socials__item">
                 <a class="socials__link" href="#" target="_blank" aria-label="whatsapp">
                     <svg>
@@ -72,7 +72,7 @@
                 </a>
             </li>
         </ul>
-        <ul class="navigation-connection__contacts">
+        <ul class="navigation-connection__contacts" data-color>
             <li class="navigation-connection__contact">
                 <a class="navigation-connection__link" href="tel:+70070000880">
                     +7 (007)-000-08-80
@@ -84,7 +84,7 @@
                 </a>
             </li>
         </ul>
-        <p class="navigation-connection__text">
+        <p class="navigation-connection__text" data-color>
             Ежедневно с 11:00 до 21:00
         </p>
     </div>
