--- a/src/styles/components/blocks/_side-menu.scss
+++ b/src/styles/components/blocks/_side-menu.scss
@@ -5,7 +5,7 @@
 	left: 0;
 	top: 95px;
 	bottom: 0;
-	z-index: 2;
+	z-index: 3;
 	overflow-y: auto;
 	padding: 6.5vh 20px 6.5vh 50px;
 	width: 100%;
@@ -13,6 +13,12 @@
 
 	&__items {
 		@include flex-simple(20px, column);
+
+		&[data-color='light'] {
+			.side-menu__link {
+				color: var(--color-white);
+			}
+		}
 
 		&--dots {
 			padding-right: 16px;
@@ -58,9 +64,44 @@
 		@include title(16px);
 
 		color: var(--color-grey-600);
+		transition: color 0.3s;
 	}
 
 	@include mq(xl) {
 		display: none;
+	}
+
+	.navigation-connection {
+		&__contacts {
+			&[data-color='light'] {
+				.navigation-connection__link {
+					color: var(--color-white);
+				}
+			}
+		}
+
+		&__link {
+			transition: color 0.3s;
+		}
+
+		&__text {
+			transition:
+				color 0.3s,
+				opacity 0.3s;
+
+			&[data-color='light'] {
+				color: var(--color-white);
+				opacity: 0.5;
+			}
+		}
+	}
+
+	.socials {
+		&[data-color='light'] {
+			.socials__link {
+				color: var(--color-dark-600);
+				background-color: var(--color-white);
+			}
+		}
 	}
 }
