--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -14,6 +14,7 @@
 @import '../components/blocks/header/nav-menu';
 
 // base
+@import '../components/blocks/page-wrapper';
 @import '../components/blocks/form';
 @import '../components/blocks/navigation-connection';
 @import '../components/blocks/side-menu';
