--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -10,3 +10,6 @@
 @import '../pages/home-page/blog-block';
 @import '../pages/home-page/reviews';
 @import '../pages/home-page/media';
+
+// catalog-page
+@import '../pages/catalog-page/catalog';
