--- a/src/html/components/blocks/_breadcrumbs.html
+++ b/src/html/components/blocks/_breadcrumbs.html
@@ -1,28 +1,8 @@
-<div class="@class">
-    <div class="container">
-        <ul class="breadcrumbs__items">
-            <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="index.html">Главная</a>
-            </li>
-
-            @if(context.count === '2') {
-            <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">@2</a>
+<div class="breadcrumbs">
+    <ul class="breadcrumbs__items">
+        @for (var i = 0; i < links.length; i++) { <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="#">`+links[i]+`</a>
             </li>
             }
-
-            @if(context.count === '3') {
-            <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">@2</a>
-            </li>
-            <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="#">@3</a>
-            </li>
-            }
-
-            <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link breadcrumbs__link--current" aria-current="page">@current</a>
-            </li>
-        </ul>
-    </div>
+    </ul>
 </div>
