--- a/src/styles/components/blocks/_breadcrumbs.scss
+++ b/src/styles/components/blocks/_breadcrumbs.scss
@@ -1,4 +1,6 @@
 .breadcrumbs {
+	@include container;
+
 	padding-bottom: 12px;
 
 	&__items {
@@ -14,15 +16,20 @@
 			padding-right: 10px;
 
 			&::before {
+				@include circle(4px, var(--color-grey-300));
+
 				content: '';
 				position: absolute;
 				right: 0;
 				top: 50%;
-				border-radius: 50%;
-				width: 4px;
-				height: 4px;
-				background-color: var(--color-grey-300);
 				transform: translateY(-50%);
+			}
+		}
+
+		&:last-child {
+			.breadcrumbs__link {
+				color: var(--color-grey-500);
+				pointer-events: none;
 			}
 		}
 	}
@@ -31,10 +38,5 @@
 		font-size: 12px;
 		white-space: nowrap;
 		color: var(--color-dark-600);
-
-		&--current {
-			color: var(--color-grey-500);
-			pointer-events: none;
-		}
 	}
 }
