--- a/src/styles/components/cards/_product-card.scss
+++ b/src/styles/components/cards/_product-card.scss
@@ -1,4 +1,6 @@
 .product-card {
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
 
@@ -110,17 +112,17 @@
 	&__footer {
 		@include flex-simple(10px);
 
-		@include mq(sm) {
-			flex-wrap: wrap;
-		}
+		flex-wrap: wrap;
+		margin-top: auto;
 	}
 
 	&__link,
 	&__button {
+		white-space: nowrap;
+
 		@include mq(sm) {
 			flex: 1 0 48%;
 			font-size: 10px;
-			white-space: nowrap;
 		}
 	}
 }
