--- a/src/styles/includes/_mixins.scss
+++ b/src/styles/includes/_mixins.scss
@@ -4,6 +4,6 @@
 @import '../mixins/mini';
 @import '../mixins/project';
 
-// @import './mixins/input';
+@import '../mixins/input';
 // @import './mixins/svg-color';
 // @import './mixins/units';
