--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -12,4 +12,8 @@
 @import '../pages/home-page/media';
 
 // catalog-page
+@import '../pages/catalog-page/filters';
 @import '../pages/catalog-page/catalog';
+
+// product-page
+@import '../pages/product-page/other-solutions';
