--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -41,4 +41,5 @@
 @import '../components/cards/review-card';
 @import '../components/cards/step-card';
 @import '../components/cards/blog-card';
+@import '../components/cards/product-realize-card';
 @import '../components/cards/solution-card';
