add product-characteristics block

--- a/src/html/components/cards/_solution-card.html
+++ b/src/html/components/cards/_solution-card.html
@@ -7,7 +7,7 @@
         </picture>
     </div>
     <div class="solution-card__content">
-        <div class="solution-card__name">
+        <div>
             <h3 class="solution-card__title">@title</h3>
             @if(typeof subtitle !== 'undefined' && subtitle) {
             <span class="solution-card__subtext">@subtitle</span>
