--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -2,6 +2,7 @@
 @import '../components/ui/button';
 @import '../components/ui/swiper-elements';
 @import '../components/ui/tabs';
+@import '../components/ui/tooltip';
 @import '../components/ui/block-head';
 
 // header
@@ -41,5 +42,6 @@
 @import '../components/cards/review-card';
 @import '../components/cards/step-card';
 @import '../components/cards/blog-card';
+@import '../components/cards/characteristic-card';
 @import '../components/cards/product-realize-card';
 @import '../components/cards/solution-card';
