--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -16,5 +16,6 @@
 @import '../pages/catalog-page/catalog';
 
 // product-page
+@import '../pages/product-page/product-characteristics';
 @import '../pages/product-page/product-projects';
 @import '../pages/product-page/other-solutions';
