--- a/src/html/components/cards/_product-card.html
+++ b/src/html/components/cards/_product-card.html
@@ -11,14 +11,14 @@
             <a class="product-card__title" href="#">
                 <h3>@title</h3>
             </a>
-            @if(question !== 'null' && question !== 'null') {
+            @if(question !== 'null') {
             <button class="product-card__question" type="button" data-tippy-content>
                 @question
                 <svg>
                     <use xlink:href="img/sprite.svg#question">
                 </svg>
             </button>
-            <div class="product-card__answer">
+            <div class="tooltip">
                 @answer
             </div>
             }
