add facade-colors block

--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -42,6 +42,7 @@
 @import '../components/cards/review-card';
 @import '../components/cards/step-card';
 @import '../components/cards/blog-card';
+@import '../components/cards/facade-card';
 @import '../components/cards/characteristic-card';
 @import '../components/cards/product-realize-card';
 @import '../components/cards/solution-card';
