add unique-quality block

--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -16,6 +16,7 @@
 @import '../pages/catalog-page/catalog';
 
 // product-page
+@import '../pages/product-page/unique-quality';
 @import '../pages/product-page/facade-colors';
 @import '../pages/product-page/product-characteristics';
 @import '../pages/product-page/product-projects';
