--- a/src/styles/pages/product-page/_guarantee.scss
+++ b/src/styles/pages/product-page/_guarantee.scss
@@ -1,4 +1,4 @@
-.unique-quality {
+.guarantee-block {
 	@include container;
 
 	&__info {
@@ -42,22 +42,37 @@
 		}
 	}
 
-	&__image {
-		position: relative;
-		padding-bottom: 45%;
+	&__images {
+		@include flex-simple(20px);
+
 		width: 100%;
 
 		@include mq(sm) {
-			padding-bottom: 62%;
+			overflow: auto;
+			padding-bottom: 12px;
+			gap: 10px;
+		}
+	}
+
+	&__image {
+		position: relative;
+		padding-bottom: 50%;
+		width: 100%;
+
+		@include mq(sm) {
+			flex-shrink: 1;
+			padding-bottom: 100%;
+			min-width: 100%;
 		}
 	}
 
 	&__bg {
+		@include bg-properties;
+
 		position: absolute;
-		inset: 0;
+		left: 0;
+		top: 0;
 		width: 100%;
 		height: 100%;
-
-		@include bg-properties;
 	}
 }
