refactor guarantee block

--- a/src/styles/pages/product-page/_guarantee.scss
+++ b/src/styles/pages/product-page/_guarantee.scss
@@ -56,8 +56,12 @@
 
 	&__image {
 		position: relative;
-		padding-bottom: 50%;
+		padding-bottom: 36%;
 		width: 100%;
+
+		@include mq(md) {
+			padding-bottom: 50%;
+		}
 
 		@include mq(sm) {
 			flex-shrink: 1;
