--- a/src/styles/includes/_pages.scss
+++ b/src/styles/includes/_pages.scss
@@ -16,6 +16,7 @@
 @import '../pages/catalog-page/catalog';
 
 // product-page
+@import '../pages/product-page/quality-materials';
 @import '../pages/product-page/guarantee';
 @import '../pages/product-page/unique-quality';
 @import '../pages/product-page/facade-colors';
