--- a/src/styles/pages/product-page/_quality-materials.scss
+++ b/src/styles/pages/product-page/_quality-materials.scss
@@ -20,11 +20,25 @@
 	}
 
 	&__items {
-		@include mq(md, min) {
-			position: absolute;
-			z-index: 2;
-			width: 100%;
-			height: 100%;
+		&--desktop {
+			@include mq(md) {
+				display: none;
+			}
+
+			@include mq(md, min) {
+				position: absolute;
+				z-index: 2;
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+		&--mobile {
+			display: none;
+
+			@include mq(md) {
+				display: block;
+			}
 		}
 	}
 
@@ -32,6 +46,14 @@
 		@include mq(md, min) {
 			position: absolute;
 			display: inline-block;
+		}
+
+		&:not(:last-child) {
+			@include mq(md) {
+				margin-bottom: 10px;
+				border-bottom: 1px solid var(--color-grey-200);
+				padding-bottom: 10px;
+			}
 		}
 	}
 
@@ -78,9 +100,11 @@
 	}
 
 	&__tooltip {
-		padding: 20px;
-		max-width: 290px;
-		background-color: var(--color-white);
+		@include mq(md, min) {
+			padding: 20px;
+			max-width: 290px;
+			background-color: var(--color-white);
+		}
 	}
 
 	&__subtitle {
@@ -94,10 +118,15 @@
 	}
 
 	&__image {
+		position: relative;
 		padding-bottom: 46%;
 
 		@include mq(lg) {
-			padding-bottom: 52%;
+			padding-bottom: 50%;
+		}
+
+		@include mq(md) {
+			margin-bottom: 20px;
 		}
 
 		@include mq(sm) {
