--- a/src/styles/mixins/_project.scss
+++ b/src/styles/mixins/_project.scss
@@ -77,3 +77,22 @@
 	height: $sizes;
 	background-color: $bg-color;
 }
+
+@mixin question-button($gap: 8px, $svg-size: 20px) {
+	@include flex-alignment($gap, flex-start, center);
+
+	@media (any-hover: hover) {
+		&:hover {
+			svg {
+				color: var(--color-dark-600);
+			}
+		}
+	}
+
+	svg {
+		width: $svg-size;
+		height: $svg-size;
+		color: var(--color-grey-400);
+		transition: color 0.3s;
+	}
+}
