refactor burger-menu

--- a/src/html/components/blocks/_footer.html
+++ b/src/html/components/blocks/_footer.html
@@ -8,14 +8,14 @@
                 <ul class="socials">
                     <li class="socials__item">
                         <a class="socials__link" href="#" target="_blank" aria-label="whatsapp">
-                            <svg>
+                            <svg aria-hidden>
                                 <use xlink:href="img/sprite.svg#whatsapp">
                             </svg>
                         </a>
                     </li>
                     <li class="socials__item">
                         <a class="socials__link" href="#" target="_blank" aria-label="telegram">
-                            <svg>
+                            <svg aria-hidden>
                                 <use xlink:href="img/sprite.svg#telegram">
                             </svg>
                         </a>
