--- a/src/html/components/blocks/_questions.html
+++ b/src/html/components/blocks/_questions.html
@@ -24,7 +24,7 @@
             <div class="form__bottom">
                 <button class="form__button button button--dark" type="submit">
                     Получить консультацию
-                    <svg>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </button>
@@ -37,7 +37,7 @@
             </div>
         </form>
         <div class="questions__list">
-            <h2 class="questions__title title">
+            <h2 class="title">
                 Вопрос-ответ
             </h2>
 
