--- a/src/html/components/blocks/header/_menu-categories.html
+++ b/src/html/components/blocks/header/_menu-categories.html
@@ -69,7 +69,7 @@
                 </label>
                 <input class="form__field form__field--search" id="nav-menu-search" name="search" type="search" placeholder="Поиск по каталогу" required>
                 <button class="form__button-search" type="submit" aria-label="Найти">
-                    <svg>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#search">
                     </svg>
                 </button>
