--- a/src/html/components/blocks/modals/_consultation.html
+++ b/src/html/components/blocks/modals/_consultation.html
@@ -25,7 +25,7 @@
             <div class="form__bottom">
                 <button class="form__button button button--dark" type="submit">
                     Отправить заявку
-                    <svg>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </button>
