--- a/src/html/components/cards/_facade-card.html
+++ b/src/html/components/cards/_facade-card.html
@@ -1,5 +1,5 @@
 <article class="facade-card">
-    <a class="facade-card__image" href="#">
+    <a class="facade-card__image" href="img/blocks/facades/@img.jpg" data-fancybox="facades-gallery">
         <picture>
             <source srcset="img/blocks/facades/@img.avif" type="image/avif">
             <source srcset="img/blocks/facades/@img.webp" type="image/webp">
