--- a/src/html/components/cards/_spoller-card.html
+++ b/src/html/components/cards/_spoller-card.html
@@ -1,6 +1,6 @@
 <button class="spollers__button" type="button" data-spoller-button>
     @title
-    <svg class="spolleres__icon">
+    <svg aria-hidden>
         <use xlink:href="img/sprite.svg#close">
     </svg>
 </button>
