--- a/src/styles/components/blocks/header/burger/_burger-button.scss
+++ b/src/styles/components/blocks/header/burger/_burger-button.scss
@@ -35,6 +35,20 @@
 		}
 	}
 
+	&__text {
+		@include mq(lg) {
+			display: none;
+		}
+
+		&[data-burger-button-text] {
+			display: none;
+
+			@include mq(lg) {
+				display: flex;
+			}
+		}
+	}
+
 	&__line {
 		position: relative;
 		display: block;
