--- a/src/styles/includes/_components.scss
+++ b/src/styles/includes/_components.scss
@@ -8,9 +8,13 @@
 // header
 @import '../components/blocks/header/header';
 @import '../components/blocks/header/header-transparent';
+@import '../components/blocks/header/header-consultation';
 @import '../components/blocks/header/burger/burger-button';
 @import '../components/blocks/header/burger/burger-menu';
+@import '../components/blocks/header/burger/burger-socials';
+@import '../components/blocks/header/burger/burger-navigation-connection';
 @import '../components/blocks/header/burger/burger-mobile';
+@import '../components/blocks/header/burger/burger-banners';
 @import '../components/blocks/header/burger/burger-block';
 @import '../components/blocks/header/menu-categories';
 @import '../components/blocks/header/nav-menu';
