--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -1,9 +1,5 @@
-<!-- 
- light - светлый фон, темный текст;  
- dark - темный фон, светлый текст ; 
--->
-<div class="overlay" data-menu-overlay aria-hidden></div>
 <header class="header @class">
+    <div class="overlay" data-menu-overlay aria-hidden></div>
     <nav class="header__navigation">
         <div class="header__wrapper-logo">
             <a class="header__logo logo" href="#">
@@ -15,32 +11,33 @@
             <div class="header__item header__item--buttons">
                 <button class="header__button button" type="button">
                     Кухни и мебель
-                    <svg class="button__icon">
+                    <svg class="button__icon" aria-hidden>
                         <use xlink:href="img/sprite.svg#plus">
                     </svg>
                 </button>
 
                 <a class="header__button header__button--link button" href="#">
                     Акции
-                    <svg class="button__icon">
+                    <svg class="button__icon" aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </a>
             </div>
 
-            <div class="header__item header__item--contacts">
-                <button class="header__consultation button button--dark" type="button" data-graph-path="consultation">
+            <div class="header-consultation header__item header__item--contacts">
+                <button class="header-consultation__button button button--dark" type="button" data-graph-path="consultation">
                     <span class="button__point" aria-hidden></span>
                     Консультация дизайнера
                 </button>
 
-                <a class="header__contact" href="tel:+74951011919">
+                <a class="header-consultation__contact" href="tel:+74951011919">
                     +7 (495)-101-19-19
                 </a>
             </div>
 
-            <button class="burger-button" aria-expanded="false" aria-controls="header-burger-menu" data-burger-button>
+            <button class="header__burger-button burger-button" aria-expanded="false" aria-controls="header-burger-menu" data-burger-button>
                 <span class="burger-button__text" aria-live="polite" data-burger-button-text>Меню</span>
+                <span class="burger-button__text">Меню</span>
                 <span class="burger-button__plate" aria-hidden>
                     <span class="burger-button__line"></span>
                 </span>
