--- a/src/html/components/cards/_characteristic-card.html
+++ b/src/html/components/cards/_characteristic-card.html
@@ -9,7 +9,7 @@
             @if(`values[i].isButton` === true) {
             <button class="characteristic-card__value" type="button" data-tippy-content>
                 `+values[i].title+`
-                <svg>
+                <svg aria-hidden>
                     <use xlink:href="img/sprite.svg#question">
                 </svg>
             </button>
