--- a/src/html/components/cards/_product-realize-card.html
+++ b/src/html/components/cards/_product-realize-card.html
@@ -1,11 +1,11 @@
 <article class="product-realize">
-    <div class="product-realize__image">
+    <a class="product-realize__image" href="img/blocks/products/kitchens/@img.jpg" data-fancybox="product-realize-gallery">
         <picture>
             <source srcset="img/blocks/products/kitchens/@img.avif" type="image/avif">
             <source srcset="img/blocks/products/kitchens/@img.webp" type="image/webp">
             <img class="product-realize__img" src="img/blocks/products/kitchens/@img.jpg" alt="@alt" width="585" height="390" loading="lazy">
         </picture>
-    </div>
+    </a>
     <div class="product-realize__content">
         <div class="product-realize__info">
             <span class="product-realize__price">@price</span>
@@ -17,7 +17,7 @@
             <button class="product-realize__button button button--decor" type="button">
                 Хочу похожий
                 <span class="button__decor">
-                    <svg>
+                    <svg aria-hidden>
                         <use xlink:href="img/sprite.svg#arrows-double">
                     </svg>
                 </span>
