--- a/src/styles/includes/_libs.scss
+++ b/src/styles/includes/_libs.scss
@@ -1,3 +1,4 @@
 @import '../libs/modal';
 @import '../../../node_modules/graph-tabs/dist/graph-tabs.min';
 @import '../../../node_modules/swiper/swiper-bundle.min';
+@import '../../../node_modules/@fancyapps/ui/dist/fancybox/fancybox';
