--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -1,7 +1,7 @@
 <div class="burger-menu" id="header-burger-menu" data-menu>
     <div class="burger-menu__header">
         <div class="header-consultation">
-            <button class="header-consultation__button button button--dark" type="button" data-graph-path="consultation">
+            <button class="header-consultation__button button button--dark" type="button" aria-controls="modal-consultation" data-graph-path="consultation">
                 <span class="button__point" aria-hidden></span>
                 Консультация дизайнера
             </button>
@@ -20,7 +20,7 @@
     </div>
     <div class="burger-menu__body">
         <div class="burger-menu__buttons">
-            <button class="burger-menu__button button button--dark" type="button">
+            <button class="burger-menu__button button button--dark" aria-controls="modal-consultation" type="button">
                 <span class="button__point" aria-hidden></span>
                 Консультация дизайнера
             </button>
