--- a/src/html/components/blocks/modals/_consultation.html
+++ b/src/html/components/blocks/modals/_consultation.html
@@ -1,4 +1,4 @@
-<div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="consultation">
+<div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="consultation" id="modal-consultation">
     <div class="graph-modal__box">
         <button class="graph-modal__close js-modal-close" aria-label="Закрыть модальное окно"></button>
         <form class="graph-modal__form form" action="#">
