--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -8,7 +8,7 @@
         </div>
 
         <div class="header__inner">
-            <div class="header__item header__item--buttons">
+            <div class="header__item">
                 <button class="header__button button" type="button">
                     Кухни и мебель
                     <svg class="button__icon" aria-hidden>
@@ -24,7 +24,7 @@
                 </a>
             </div>
 
-            <div class="header-consultation header__item header__item--contacts">
+            <div class="header-consultation">
                 <button class="header-consultation__button button button--dark" type="button" data-graph-path="consultation">
                     <span class="button__point" aria-hidden></span>
                     Консультация дизайнера
