--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -130,9 +130,11 @@ body {
 	height: 100%;
 	background-color: var(--color-black);
 	opacity: 0;
+	display: none;
 
 	&--active {
 		z-index: 4;
 		opacity: 0.5;
+		display: block;
 	}
 }
