--- a/src/styles/components/blocks/header/_header.scss
+++ b/src/styles/components/blocks/header/_header.scss
@@ -7,10 +7,17 @@
 	height: 95px;
 	font-weight: 500;
 	color: var(--color-dark-600);
-	background-color: var(--color-white);
-	transition:
-		background-color 0.3s,
-		color 0.3s;
+
+	&::before {
+		content: '';
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		height: 0.5px;
+		background-color: var(--color-grey-200);
+		transition: background-color 0.3s;
+	}
 
 	&--fixed {
 		position: fixed;
@@ -32,17 +39,6 @@
 		display: flex;
 		height: 100%;
 		background-color: var(--color-white);
-
-		&::before {
-			content: '';
-			position: absolute;
-			left: 0;
-			bottom: 0;
-			width: 100%;
-			height: 0.5px;
-			background-color: var(--color-grey-200);
-			transition: background-color 0.3s;
-		}
 
 		@include mq(lg) {
 			position: relative;
@@ -83,21 +79,19 @@
 		@include mq(lg, min) {
 			padding: 8px 45px;
 		}
+
+		.header-consultation {
+			@include mq(xl) {
+				margin: 0 auto;
+			}
+		}
 	}
 
 	&__item {
 		@include flex-alignment(10px, flex-start);
 
-		&--buttons {
-			@include mq(xl) {
-				display: none;
-			}
-		}
-
-		&--contacts {
-			@include mq(xl) {
-				margin: 0 auto;
-			}
+		@include mq(xl) {
+			display: none;
 		}
 	}
 
