refactor size of image

--- a/src/html/components/cards/_facade-card.html
+++ b/src/html/components/cards/_facade-card.html
@@ -3,7 +3,7 @@
         <picture>
             <source srcset="img/blocks/facades/@img.avif" type="image/avif">
             <source srcset="img/blocks/facades/@img.webp" type="image/webp">
-            <img class="facade-card__img" src="img/blocks/facades/@img.jpg" alt="@alt" width="188" height="268" loading="lazy">
+            <img class="facade-card__img" src="img/blocks/facades/@img.jpg" alt="@alt" loading="lazy">
         </picture>
     </a>
     <h3 class="facade-card__title">@title</h3>
