--- a/src/html/components/cards/_product-realize-card.html
+++ b/src/html/components/cards/_product-realize-card.html
@@ -3,7 +3,7 @@
         <picture>
             <source srcset="img/blocks/products/kitchens/@img.avif" type="image/avif">
             <source srcset="img/blocks/products/kitchens/@img.webp" type="image/webp">
-            <img class="product-realize__img" src="img/blocks/products/kitchens/@img.jpg" alt="@alt" width="585" height="390" loading="lazy">
+            <img class="product-realize__img" src="img/blocks/products/kitchens/@img.jpg" alt="@alt" loading="lazy">
         </picture>
     </a>
     <div class="product-realize__content">
