--- a/src/html/components/cards/_product-card.html
+++ b/src/html/components/cards/_product-card.html
@@ -3,7 +3,7 @@
         <picture>
             <source srcset="img/blocks/products/kitchens/@img.avif" type="image/avif">
             <source srcset="img/blocks/products/kitchens/@img.webp" type="image/webp">
-            <img class="product-card__img" src="img/blocks/products/kitchens/@img." alt="@alt" width="605" height="410" loading="lazy">
+            <img class="product-card__img" src="img/blocks/products/kitchens/@img.jpg" alt="@alt" loading="lazy">
         </picture>
     </a>
     <div class="product-card__content">
