--- a/src/styles/components/cards/_product-card.scss
+++ b/src/styles/components/cards/_product-card.scss
@@ -5,8 +5,10 @@
 	height: 100%;
 
 	&__image {
+		position: relative;
 		display: inline-block;
 		margin-bottom: 10px;
+		padding-bottom: 68%;
 		width: 100%;
 	}
 
@@ -18,6 +20,9 @@
 
 	&__img {
 		@include img-base;
+
+		position: absolute;
+		inset: 0;
 	}
 
 	&__content {
