--- a/src/html/components/blocks/header/_menu-categories.html
+++ b/src/html/components/blocks/header/_menu-categories.html
@@ -1,79 +1,81 @@
-<div class="menu-categories">
-    <span class="menu-categories__title">
-        Категории
-    </span>
-    <div class="menu-categories__wrapper">
-        <ul class="nav-menu menu-categories__list">
-            <li class="nav-menu__category">
-                <span class="nav-menu__title">
-                    Кухонные решения
-                </span>
-                <ul class="nav-menu__items">
-                    <li>
-                        <a href="#">Современный стиль</a>
-                    </li>
-                    <li>
-                        <a href="#">Нео классика</a>
-                    </li>
-                    <li>
-                        <a href="#">Классический стиль</a>
-                    </li>
-                    <li>
-                        <a href="#">Все кухни</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-menu__category">
-                <span class="nav-menu__title">
-                    Корпусная мебель
-                </span>
-                <ul class="nav-menu__items">
-                    <li>
-                        <a href="#">Шкафы</a>
-                    </li>
-                    <li>
-                        <a href="#">Гостинные</a>
-                    </li>
-                    <li>
-                        <a href="#">Гардеробные</a>
-                    </li>
-                    <li>
-                        <a href="#">Прихожие</a>
-                    </li>
-                    <li>
-                        <a href="#">Аксессуары для шкафов</a>
-                    </li>
-                </ul>
-            </li>
-            <li class="nav-menu__category">
-                <ul class="nav-menu__items nav-menu__items--root">
-                    <li>
-                        <a href="#">Бытовая техника</a>
-                    </li>
-                    <li>
-                        <a href="#">Реализованные проекты</a>
-                    </li>
-                    <li>
-                        <a href="#">Продажа образцов</a>
-                    </li>
-                    <li>
-                        <a href="#">Мойки и аксессуары</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-        <form class="menu-categories__search form" action="#">
-            <div class="form__item">
-                <label class="sr-only" for="nav-menu-search">
-                    Введите, что вы хотите найти
-                </label>
-                <input class="form__field form__field--search" id="nav-menu-search" name="search" type="search" placeholder="Поиск по каталогу" required>
-                <button class="form__button-search" type="submit" aria-label="Найти">
-                    <svg aria-hidden>
-                        <use xlink:href="img/sprite.svg#search">
-                    </svg>
-                </button>
-            </div>
-        </form>
+<div class="menu-categories" id="menu-categories" aria-hidden="true">
+    <div class="menu-categories__inner">
+        <span class="menu-categories__title">
+            Категории
+        </span>
+        <div class="menu-categories__wrapper">
+            <ul class="nav-menu menu-categories__list">
+                <li class="nav-menu__category">
+                    <span class="nav-menu__title">
+                        Кухонные решения
+                    </span>
+                    <ul class="nav-menu__items">
+                        <li>
+                            <a href="#">Современный стиль</a>
+                        </li>
+                        <li>
+                            <a href="#">Нео классика</a>
+                        </li>
+                        <li>
+                            <a href="#">Классический стиль</a>
+                        </li>
+                        <li>
+                            <a href="#">Все кухни</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-menu__category">
+                    <span class="nav-menu__title">
+                        Корпусная мебель
+                    </span>
+                    <ul class="nav-menu__items">
+                        <li>
+                            <a href="#">Шкафы</a>
+                        </li>
+                        <li>
+                            <a href="#">Гостинные</a>
+                        </li>
+                        <li>
+                            <a href="#">Гардеробные</a>
+                        </li>
+                        <li>
+                            <a href="#">Прихожие</a>
+                        </li>
+                        <li>
+                            <a href="#">Аксессуары для шкафов</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-menu__category">
+                    <ul class="nav-menu__items nav-menu__items--root">
+                        <li>
+                            <a href="#">Бытовая техника</a>
+                        </li>
+                        <li>
+                            <a href="#">Реализованные проекты</a>
+                        </li>
+                        <li>
+                            <a href="#">Продажа образцов</a>
+                        </li>
+                        <li>
+                            <a href="#">Мойки и аксессуары</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="menu-categories__search form" action="#">
+                <div class="form__item">
+                    <label class="sr-only" for="nav-menu-search">
+                        Введите, что вы хотите найти
+                    </label>
+                    <input class="form__field form__field--search" id="nav-menu-search" name="search" type="search" placeholder="Поиск по каталогу" required>
+                    <button class="form__button-search" type="submit" aria-label="Найти">
+                        <svg aria-hidden>
+                            <use xlink:href="img/sprite.svg#search">
+                        </svg>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
