--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -9,7 +9,7 @@
 
         <div class="header__inner">
             <div class="header__item">
-                <button class="header__button button" type="button">
+                <button class="header__button header__button--menu button" aria-expanded="false" aria-controls="menu-categories" type="button">
                     Кухни и мебель
                     <svg class="button__icon" aria-hidden>
                         <use xlink:href="img/sprite.svg#plus">
