--- a/src/styles/components/blocks/header/_menu-categories.scss
+++ b/src/styles/components/blocks/header/_menu-categories.scss
@@ -1,14 +1,19 @@
 .menu-categories {
-	display: flex;
-	flex-direction: column;
+	--menu-categories-height: auto;
+
 	position: fixed;
 	left: 0;
 	top: 0;
+	// display: flex;
+	// flex-direction: column;
 	width: 100%;
 	background-color: var(--color-white);
 	visibility: hidden;
 	transform: translateY(-100%);
 	transition: transform 0.5s;
+	padding: 154px 50px 85px;
+	overflow: hidden;
+	//height: var(--menu-categories-height);
 
 	@include mq(xl) {
 		display: none;
@@ -16,18 +21,13 @@
 
 	&--active {
 		z-index: -1;
+		overflow-y: auto;
+		height: 465px;
+		max-height: 100%;
 		opacity: 1;
 		visibility: visible;
 		transform: translateY(0);
 		transition: transform 0.3s ease-in-out;
-	}
-
-	&__inner {
-		overflow: auto;
-		position: relative;
-		height: -webkit-fill-available;
-		height: fill-available;
-		padding: 154px 50px 85px;
 	}
 
 	&__wrapper,
@@ -45,6 +45,7 @@
 
 	&__wrapper {
 		display: flex;
+
 		// overflow: auto;
 	}
 
