--- a/src/html/components/blocks/_addresses-block.html
+++ b/src/html/components/blocks/_addresses-block.html
@@ -106,7 +106,7 @@
                 <span class="addresses-block__subtext">
                     Оставьте заявку на сайте, и приходите в наш салон.
                 </span>
-                <button class="addresses-block__button button button--decor" type="button">
+                <button class="addresses-block__button button button--decor" data-graph-path="sign-up-salon" aria-controls="modal-salon" type="button">
                     Записаться в салон
                     <span class="button__decor" aria-hidden>
                         <svg>
