--- a/src/html/components/blocks/header/_burger-menu.html
+++ b/src/html/components/blocks/header/_burger-menu.html
@@ -20,11 +20,11 @@
     </div>
     <div class="burger-menu__body">
         <div class="burger-menu__buttons">
-            <button class="burger-menu__button button button--dark" aria-controls="modal-consultation" type="button">
+            <button class="burger-menu__button button button--dark" controls="modal-consultation" data-graph-path="consultation" type="button">
                 <span class="button__point" aria-hidden></span>
                 Консультация дизайнера
             </button>
-            <button class="burger-menu__button button button--accent" type="button">
+            <button class="burger-menu__button button button--accent" data-graph-path="sign-up-salon" aria-controls="modal-salon" type="button">
                 Записаться в салон
                 <svg class="button__icon" aria-hidden>
                     <use xlink:href="img/sprite.svg#arrows-double">
@@ -278,7 +278,7 @@
                     </li>
                 </ul>
             </div>
-            <button class="burger-menu__button burger-menu__button--desktop button button--accent" type="button">
+            <button class="burger-menu__button burger-menu__button--desktop button button--accent" data-graph-path="sign-up-salon" aria-controls="modal-salon" type="button">
                 Записаться в салон
                 <svg aria-hidden>
                     <use xlink:href="img/sprite.svg#arrows-double">
