--- a/src/html/components/blocks/header/_header.html
+++ b/src/html/components/blocks/header/_header.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="header-consultation">
-                <button class="header-consultation__button button button--dark" type="button" data-graph-path="consultation">
+                <button class="header-consultation__button button button--dark" type="button" aria-controls="modal-consultation" data-graph-path="consultation">
                     <span class="button__point" aria-hidden></span>
                     Консультация дизайнера
                 </button>
