--- a/src/html/components/blocks/modals/_salon.html
+++ b/src/html/components/blocks/modals/_salon.html
@@ -1,7 +1,7 @@
-<div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="consultation" id="modal-consultation">
+<div class="graph-modal__container" role="dialog" aria-modal="true" data-graph-target="sign-up-salon" id="modal-salon">
     @include('./_modal-template.html', {
-    'title' : 'Консультация дизайнера',
+    'title' : 'Записаться в салон',
     'text' : ['Оставьте заявку, наши менеджеры свяжутся с вами в течение ближайшего времени'],
-    'id' : 'consultation',
+    'id' : 'salon',
     })
 </div>
