--- a/src/styles/components/blocks/_form.scss
+++ b/src/styles/components/blocks/_form.scss
@@ -32,6 +32,44 @@
 		}
 	}
 
+	&__tabs {
+		@include flex-simple(10px);
+
+		width: 100%;
+
+		&:not(:last-child) {
+			margin-bottom: 20px;
+		}
+
+		@include mq(sm) {
+			flex-direction: column;
+		}
+	}
+
+	&__hidden {
+		@include hidden;
+
+		&:checked {
+			& + .form__box {
+				border-color: var(--color-dark-600);
+			}
+		}
+	}
+
+	&__box {
+		border: 1px solid var(--color-grey-200);
+		padding: 35px;
+		font-size: 14px;
+		text-align: center;
+		display: inline-block;
+
+		@include mq(sm) {
+			padding: 22px;
+			font-size: 12px;
+			letter-spacing: -0.03em;
+		}
+	}
+
 	&__items {
 		@include flex-simple(30px, column);
 
